fix spacing between content-blocks. refs #210

--- a/res/less/components/content.less
+++ b/res/less/components/content.less
@@ -6,6 +6,10 @@
     margin-bottom: 5rem;
 }
 
+.content-block {
+    margin-bottom: 1rem;
+}
+
 .content-classification {
     display: block;
     font-size: 3.2rem;
